--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,8 +6,8 @@ media_folder: "assets/img/uploads"
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "_posts" # The path to the folder where the documents are stored
+    label: "Blog Posts" # Used in the UI
+    folder: "collections/_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
