--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,7 +17,7 @@ collections:
           label: "Permalink",
           name: "permalink",
           widget: "string",
-          default: "/blog/{{slug}}",
+          default: "/blog/",
         }
       - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
       - { label: "Body", name: "body", widget: "markdown" }
@@ -29,7 +29,12 @@ collections:
     fields:
       - { label: "Layout", name: "layout", widget: "hidden", default: "poem" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Permalink", name: "permalink", widget: "string" }
+      - {
+          label: "Permalink",
+          name: "permalink",
+          widget: "string",
+          default: "/projects/poems",
+        }
       - { label: "Tags", name: "tags", widget: "list", default: ["poem"] }
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "mempoe-poems"
@@ -41,7 +46,12 @@ collections:
       - { label: "Layout", name: "layout", widget: "hidden", default: "poem" }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Author", name: "author", widget: "string" }
-      - { label: "Permalink", name: "permalink", widget: "string" }
+      - {
+          label: "Permalink",
+          name: "permalink",
+          widget: "string",
+          default: "/projects/mempoe",
+        }
       - { label: "Tags", name: "tags", widget: "list", default: ["poem"] }
       - {
           label: "Original?",
