--- a/admin/config.yml
+++ b/admin/config.yml
@@ -33,7 +33,7 @@ collections:
           label: "Permalink",
           name: "permalink",
           widget: "string",
-          default: "/projects/poems",
+          default: "/projects/poems/",
         }
       - { label: "Tags", name: "tags", widget: "list", default: ["poem"] }
       - { label: "Body", name: "body", widget: "markdown" }
@@ -50,7 +50,7 @@ collections:
           label: "Permalink",
           name: "permalink",
           widget: "string",
-          default: "/projects/mempoe",
+          default: "/projects/mempoe/",
         }
       - { label: "Tags", name: "tags", widget: "list", default: ["poem"] }
       - {
