Added photo and removed one poem from MemPoe

--- a/_data/photos.yml
+++ b/_data/photos.yml
@@ -9,3 +9,6 @@
 
 - title: A picture of the Moon
   link: /assets/img/uploads/moon-1.jpg
+
+- title: A picture of a boat at Marina Del Rey
+  link: /assets/img/uploads/marina-del-rey-boat-1.jpg
