Added review of Digital Gold

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -138,3 +138,8 @@
   rating: 4
   review: /projects/books/project-hail-mary
   title: Project Hail Mary
+
+- author: Nathaniel Popper
+  rating: 4
+  review: /projects/books/digital-gold
+  title: Digital Gold
