Added new photo

--- a/_data/photos.yml
+++ b/_data/photos.yml
@@ -12,3 +12,6 @@
 
 - title: A picture of a boat at Marina Del Rey
   link: /assets/img/uploads/marina-del-rey-boat-1.jpg
+
+- title: A picture of Hollywood at night
+  link: /assets/img/uploads/la-night-1.jpg
