--- a/_data/books.yml
+++ b/_data/books.yml
@@ -158,3 +158,8 @@
   rating: 2
   review: /projects/books/dark-matter
   title: Dark Matter
+
+- author: Ted Chiang
+  rating: 4
+  review:
+  title: Stories of Your Life and Others
