Added new photo

--- a/_data/photos.yml
+++ b/_data/photos.yml
@@ -15,3 +15,6 @@
 
 - title: A picture of Hollywood at night
   link: /assets/img/uploads/la-night-1.jpg
+
+- title: A picture of the Sydney Opera House
+  link: /assets/img/uploads/sydney-1.jpeg
